force-app/main/default/objects/Dynamic_Content__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should this content be actively used in the Dynamic Banner component?</description>
    <inlineHelpText>Should this content be actively used in the Dynamic Banner component?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>