force-app/main/default/objects/Dynamic_Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>What type of content does this record represent?  Different types of content are used in different ways.</description>
    <inlineHelpText>What type of content does this record represent?  Different types of content are used in different ways.</inlineHelpText>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Button - Flow</fullName>
            </value>
            <value>
                <fullName>Button - Link</fullName>
            </value>
            <value>
                <fullName>Content Card</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>