force-app/main/default/objects/Dynamic_Content__c/fields/Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>Flow_URL__c</fullName>
    <description>Flow API name or hyperlink/URL to direct the user to when they click on this content</description>
    <inlineHelpText>Flow API name or hyperlink/URL to direct the user to when they click on this content</inlineHelpText>
    <label>Flow/URL</label>
    <type>TextArea</type>
</CustomField>