force-app/main/default/objects/Dynamic_Content__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>SLDS icon to display</description>
    <inlineHelpText>SLDS icon to display</inlineHelpText>
    <label>Icon</label>
    <length>155</length>
    <type>Text</type>
</CustomField>